...
                  ),
                ),
                onPressed: () {
                  Navigator.pop(context);
                },
                child: const Text(
                  'OK',
                  style: TextStyle(color: Colors.white),
                ),
              ),
            ),
          ],
        );
...
                  color: Color.fromARGB(255, 113, 147, 93),
                ),
              ),
              SizedBox(height: 16),
              MyButton(
                onTap: updatePersonData,
                text: 'Save',
              ),
            ],
          ),
        ),
      ),
    );
...
